--- a/falafel.html
+++ b/falafel.html
@@ -7,11 +7,17 @@
 </head>
 
 <body>
-	
+	<table>
+		<tr>
+			<td>
 <h1 data-titulo>
 	FALAFEL<p>___</p>
  </h1>
+</td>
 
+<td><img src="https://nomoneynotime.com.au/uploads/recipes/_1200x630_crop_center-center_82_none/Falafel-Salad_190905_063457.jpg" width="600" height="315" margin-right:50></td>
+</tr>
+</table>
 <p id="comentario"> Una versión saludable de mi obsesión frita.</p> 
 
 <table>
